hphp/hack/test/typecheck/references/refs_in_array/element_assign1.php.exp
File "element_assign1.php", line 5, characters 8-10:
Cannot take a value by reference in strict mode. (Typing[4154])
