hphp/hack/test/typecheck/references/refs_in_array/element_assign1.php
<?hh // strict

function test(): void {
  $y = 42;
  $z = &$y; // ERROR: no refs in strict mode
}
